# full-rag-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
src/api/: schemas.py
src/core/: config.py  database.py  logging.py
src/data/: synthetic_data.py
src/generation/: llm_models.py  prompts.py
src/graph/: nodes.py
src/monitoring/: metrics.py
src/vectorstore/: bootstrap_chroma.py  chroma_store.py  embeddings.py
